2013-04-24  Shiro Kawai  <shiro@acm.org>

	* Fix: src/kahua-server.scm (kahua-server-main): Open log drain
	  earlier, right after we call kahua-common-init, so that we can
	  log whatever errors happening before the server main loop.
	  (load-kahua-module): Logs the stack trace when module loading
	  is failed, for easier troubleshooting.

2012-04-23  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: test/index-slots.scm, test/persistence.scm
	  Recently, Gauche check the arity of generic functions.  So
	  some method add to bypass-arity-check list, and some tests
	  fail on Gauche before 3982bd1399fef1a206ad1e3bc2d527e37a10f6ab.
	  Watch out!!

	* Change: test/plugin.scm
	  Recently, Gauche supports "filter" as built-in procedure.  So
	  use xcons instead of filter for some plugin tests.

	* Fix: src/kahua/server.scm
	  Fixed the code depending on the bug of Gauche that map accept
	  improper lists and ignore a trailing element.  This fix is
	  suggested by Shiro Kawai.

2011-09-26  Shiro Kawai  <shiro@acm.org>

	* Fix: src/kahua/persistence.scm (on-key-cache?):
	  Fixed typo of a function name.  It's been there for a while, but
	  revealed by more strict test-module in the newer version of Gauche.

2010-07-23  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: src/kahua/partcont.scm, src/kahua/server.scm,
	          test/partcont.scm
	  Use native partial continuation support of Gauche.

	* Change: src/kahua-spvr.scm, src/kahua-keyserv.scm, src/kahua-httpd.scm
	  Drop: src/kahua/thread-pool.scm
	  Now use Gauche(trunk)'s new library module control.thread-pool instead
	  of kahua.thread-pool.

2010-05-29  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* emacs/kahua.el.in (kahua-command-path): add.
	(kahua-read-path): add
	(kahua-command-buffer-setup): add argument 'path
	(run-kahua-shell): add argument path and kahua-read-path
	(run-kahua): add argument 'path and kahua-read-path
	(kahua-command-path): fix doc-string.

2009-05-20  Tatsuya BIZENN  <bizenn@arthub.net>
